# genealogy-extractors

./: .gitignore  ANALYSIS.md  README.md  STAGED_FINDINGS_REVIEW.md  __init__.py  analyze_all_extractors.py  cdp_client.py  check_myheritage.py  debug_ancestry_names.py  debug_findagrave.py  error_log.json  error_tracker.py  extract.py  get_myheritage_results.md  processed_searches.json  processed_tracker.py  pyproject.toml  rate_limiter.py  research.py  research_runner.py  safe_to_apply.json  staged_findings.json.bak  test_all_sources.py
data/: french_locations.json
docs/: ARCHITECTURE.md  CDP_MODULES_README.md  CDP_QUICK_START.md  CLEANUP_PLAN.md  DATA_QUALITY_STRATEGY.md  E2E_TEST_RESULTS.md  FINAL_SUMMARY.md  GENEALOGY_OPTIMIZATION_ROADMAP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INTEGRATION.md  QUICK_START.md  RATE_PROTECTION_SUMMARY.md  README_RATE_PROTECTION.md  REPORTING_GUIDE.md  SEAMLESS_INTEGRATION_ROADMAP.md  SYSTEM_ARCHITECTURE.md  TESTING-FLAGS.md  TEST_RESULTS.md
extraction/: __init__.py  ancestry_extractor.py  anom_extractor.py  antenati_extractor.py  base_extractor.py  billiongraves_extractor.py  digitalarkivet_extractor.py  familysearch_extractor.py  filae_extractor.py  find_a_grave_extractor.py  freebmd_extractor.py  geneanet_extractor.py  geni_extractor.py  irishgenealogy_extractor.py  matchid_extractor.py  matricula_extractor.py  myheritage_extractor.py  scotlandspeople_extractor.py  wikitree_extractor.py
scripts/: analyze_findings.py  migrate_to_postgres.py
tests/: capture_network.py  cdp_content.txt  check_html_content.py  check_network.py  debug_html.py  (+5 more)
(+143 files in other folders)
