[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genealogy-extractors"
version = "0.1.0"
description = "Extract genealogy records from multiple online sources"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Peter Milanese", email = "peterm@milanese.life" }
]
keywords = ["genealogy", "family-tree", "web-scraping", "records"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
cdp = [
    "websockets>=11.0",
]

[project.scripts]
genealogy-extract = "genealogy_extractors.cli:extract_main"
genealogy-research = "genealogy_extractors.cli:research_main"

[project.urls]
Homepage = "https://github.com/pmilano1/genealogy-extractors"
Repository = "https://github.com/pmilano1/genealogy-extractors"

[tool.hatch.build.targets.wheel]
packages = ["src/genealogy_extractors"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

